# z-open

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  Gemfile  README.md  SESSION_EXPORT_2026_04_15.md  _config.yml  pyproject.toml  zedit.py  zopen.py
.github/workflows/: ci.yml  pages.yml  publish-pypi.yml  release.yml
cmake/: distclean.cmake  packaging.cmake
config/: default.toml
debian/: changelog  control  postinst  postrm
docs/: README.md  _config.yml  api.md  build.md  cicd-guide.md  design.md  examples.md  faq.md  github-actions.md  index.md  internals.md  migration.md  user-guide.md
docs/_includes/: hierarchy-nav.html  site-hierarchy-nav.html
docs/_layouts/: default.html
scripts/: README.md  activate.sh  dev.py  release.py  with-venv
