[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zopen"
version = "0.6.5"
description = "Smart file editor launcher — opens files in the right editor based on MIME type or extension"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["editor", "mime", "launcher", "cli"]
authors = [{name = "zopen contributors", email = "dev@example.com"}]

[project.urls]
Homepage = "https://github.com/pilakkat1964/z-open"
Repository = "https://github.com/pilakkat1964/z-open"
Documentation = "https://pilakkat.mywire.org/z-open/"
"Bug Tracker" = "https://github.com/pilakkat1964/z-open/issues"

[project.classifiers]
"Programming Language :: Python :: 3"
"Programming Language :: Python :: 3.10"
"Programming Language :: Python :: 3.11"
"Programming Language :: Python :: 3.12"
"Programming Language :: Python :: 3.13"
"Development Status :: 4 - Beta"
"License :: OSI Approved :: MIT License"
"Topic :: System :: Shells"
"Topic :: Utilities"

# python-magic is optional but strongly recommended for accurate MIME detection
dependencies = []

[project.optional-dependencies]
magic = ["python-magic"]
dev = [
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
zopen = "zopen:main"
zo    = "zopen:main"

[tool.setuptools]
py-modules = ["zopen"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
line-length = 100
